--- a/FrontEnd/htmls/root/client-form.html
+++ b/FrontEnd/htmls/root/client-form.html
@@ -9,6 +9,12 @@
 <body>
     <header>
         <h1>Cadastro de Cliente</h1>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="animal.html">Animais</a>
+            <a href="clients.html">Clients</a>
+            <button id="logoutButton">Sair</button>
+            </nav>
     </header>
     <main>
         <form id="clientForm">
