--- a/FrontEnd/htmls/root/home.html
+++ b/FrontEnd/htmls/root/home.html
@@ -8,18 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Meu Sistema</h1>
+        <h1>S.I.S Petshop</h1>
         <nav>
             <a href="clients.html">Clientes</a>
             <a href="animal.html">Animais</a>
+            <a href="employee.html">Empregados</a>
+            <a href="service.html">Serviços</a>
             <a href="login.html">Sair</a>
         </nav>
     </header>
     <main>
-        <h2>Bem-vindo</h2>
     </main>
     <footer>
-        <p>&copy; 2024 Meu Sistema. Todos os direitos reservados.</p>
+        <p>&copy; 2024 S.I.S Petshop. Todos os direitos reservados.</p>
     </footer>
     <script src="js/home.js"></script>
 </body>
