--- a/FrontEnd/htmls/root/animal-form.html
+++ b/FrontEnd/htmls/root/animal-form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Animais</title>
+    <title>S.I.S Petshop</title>
     <link rel="stylesheet" href="css/client-form.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
     </header>
     <main>
         <form id="animalForm">
-            <input type="hidden" id="animalId">
+
             <label for="name">Nome:</label>
             <input type="text" id="name" required>
 
