--- a/FrontEnd/htmls/root/animal.html
+++ b/FrontEnd/htmls/root/animal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clientes</title>
+    <title>S.I.S Petshop</title>
     <link rel="stylesheet" href="css/animal.css">
 </head>
 <body>
@@ -12,6 +12,8 @@
         <nav>
             <a href="home.html">Home</a>
             <a href="clients.html">Clientes</a>
+            <a href="employee.html">Empregados</a>
+            <a href="service.html">Serviços</a>
             <button id="logoutButton">Sair</button>
         </nav>
     </header>
@@ -20,6 +22,7 @@
         <table>
             <thead>
                 <tr>
+                    <th>Id</th>
                     <th>Nome</th>
                     <th>Tipo</th>
                     <th>Raça</th>
