--- a/FrontEnd/htmls/root/employee.html
+++ b/FrontEnd/htmls/root/employee.html
@@ -8,30 +8,30 @@
 </head>
 <body>
     <header>
-        <h1>Lista de Clientes</h1>
+        <h1>Lista de Empregados</h1>
         <nav>
         <a href="home.html">Home</a>
         <a href="animal.html">Animais</a>
-        <a href="employee.html">Empregados</a>
+        <a href="clients.html">Clientes</a>
         <a href="service.html">Serviços</a>
         <button id="logoutButton">Sair</button>
         </nav>
     </header>
     <main>
-        <button id="createClientButton">Novo Cliente</button>
+        <button id="createEmployeeButton">Novo Empregado</button>
         <table>
             <thead>
                 <tr>
+                    <th>Id</th>
                     <th>Nome</th>
                     <th>CPF</th>
                     <th>Email</th>
-                    <th>Animal</th>
                     <th>Tipo</th>
                 </tr>
             </thead>
-            <tbody id="clientsList"></tbody>
+            <tbody id="employeeList"></tbody>
         </table>
     </main>
-    <script src="js/clients.js"></script>
+    <script src="js/employee.js"></script>
 </body>
 </html>
