--- a/FrontEnd/htmls/root/animal-form.html
+++ b/FrontEnd/htmls/root/animal-form.html
@@ -20,13 +20,13 @@
         <form id="animalForm">
 
             <label for="name">Nome:</label>
-            <input type="text" id="name" required>
+            <input type="string" id="name" required>
 
             <label for="type">Tipo:</label>
-            <input type="text" id="type" required>
+            <input type="string" id="type" required>
 
             <label for="race">Raça:</label>
-            <input type="text" id="race" required>
+            <input type="string" id="race" required>
 
             <button type="submit">Salvar</button>
         </form>
