--- a/FrontEnd/htmls/root/client-form.html
+++ b/FrontEnd/htmls/root/client-form.html
@@ -31,14 +31,13 @@
 
             <label for="email">Email:</label>
             <input type="email" id="email" required>
-
-            <label for="personType">Tipo:</label>
-            <select id="personType">
-                <option value="CLIENT">Client</option>
-            </select>
             
-            <label for="animal">Animal:</label>
-            <input type="animal" id="animal" required>
+            <h3>Campos do Animal</h3>
+            
+            <label for="animal-id">Selecione um Animal:</label>
+            <select id="animal-id">
+            <option value="">Carregando...</option>
+            </select>
 
             <button type="submit">Salvar</button>
         </form>
