--- a/FrontEnd/htmls/root/employee-form.html
+++ b/FrontEnd/htmls/root/employee-form.html
@@ -20,20 +20,19 @@
     <main>
         <form id="employeeForm">
 
+            <label for="name">Nome</label>
+            <input type="text" id="name" required>
+
             <label for="cpf">CPF:</label>
-            <input type="text" id="cpf" required>
+            <input type="string" id="cpf" required>
 
             <label for="password">Password:</label>
             <input type="text" id="password" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" required>
+            <input type="text" id="email" required>
 
-            <label for="personType">Tipo:</label>
-            <select id="personType">
-                <option value="EPLOYEE">Employee</option>
-            </select>
-            
+
             <button type="submit">Salvar</button>
         </form>
     </main>
